--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,1 +1,108 @@
-<p>This is the partial for view 1.</p>
+<div class="container">
+  <h1>Gerador de cartão para empresas</h1>
+
+  <div class="col-12 p-0 top-bar">
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+      <!-- PREDEFINIDOS -->
+      <li class="nav-item">
+        <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">
+          <i class="far fa-images fa-3x"></i>
+        </a>
+      </li>
+
+      <!-- IMAGENS -->
+      <li class="nav-item">
+        <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">
+          <i class="far fa-file-image fa-3x"></i>
+        </a>
+      </li>
+
+      <!-- TEXTOS -->
+      <li class="nav-item">
+        <a class="nav-link" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">
+          <i class="fa fa-text-height fa-3x"></i>
+        </a>
+      </li>
+    </ul>
+  </div>
+
+  <div class="tab-content float-left col-3 p-0 mt-2" id="myTabContent" style="height: 40rem; border: 1px solid #dbdddf;">
+
+    <!-- LISTA DE TEXTOS -->
+    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+      <!-- ADICIOANR TEXTO -->
+      <div class="add-item background-default">
+        <button class="btn btn-info" ng-click="addText();">
+          <i class="fas fa-plus"></i> Adicionar texto
+        </button>
+      </div>
+
+      <!-- LISTAGEM DE TEXTOS -->
+      <div ng-repeat="element in newCard track by $index">
+        <div class="input-group" style="padding: .50rem 0;">
+          <div class="input-group-prepend cursor-grabbing">
+            <div class="input-group-text" id="btnGroupAddon"><i class="fas fa-arrows-alt-v"></i></div>
+          </div>
+          <textarea class="form-control" type="text" ng-model="element.tempText" ng-blur="updateText(element);" placeholder="" rows="1"></textarea>
+          <div class="input-group-prepend">
+            <button type="button" class="btn btn-secondary" ng-click="moveToBack(element);">
+              <i class="fas fa-trash"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- MENU LATERAL DE IMAGENS -->
+    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+      ewrwer
+    </div>
+
+    <!-- LISTA DE IMAGENS PREDEFINIDOS -->
+    <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+      <div ng-repeat="predefinido in predefinidos track by $index">
+        <!--      <h5>{{predefinido.name}}</h5>-->
+        <div class="img-thumbnail mb-2 card-item">
+          <label class="m-0">
+            <input class="radio-image" type="radio" name="test" value="small">
+            <img class="responsive" src="../assets/images/backgrounds/{{predefinido.image}}" style="max-height: 50px; width: 100%;">
+          </label>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-9 float-left mt-2">
+    <div>
+      <div class="form-group form-inline p-2 background-default">
+        <!-- SELCIONAR COR DA FONTE -->
+        <div class="input-group ml-2">
+          <div class="input-group-prepend cursor-grabbing">
+            <div class="input-group-text"><i class="fas fa-fill-drip"></i></div>
+          </div>
+          <input class="form-control input-tool-bar" type="color" value="#000000" id="example-color-input">
+        </div>
+
+        <!-- SELCIONAR FONTES -->
+        <div class="input-group ml-2">
+          <div class="input-group-prepend cursor-grabbing">
+            <div class="input-group-text"><i class="fas fa-font"></i></div>
+          </div>
+          <select id="selecth1FontFamily" name="selectFontFamily">
+            <option ng-repeat="font in fonts track by $index" style="font-family: {{font.font}};">{{font.name}}</option>
+          </select>
+        </div>
+
+        <!-- SELCIONAR FONTES -->
+        <div class="input-group ml-2">
+          <button class="btn btn-secondary input-tool-bar" type="button" ng-click="removeElement(element);">
+            <i class="fas fa-trash"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="p-3 background-default" id="container" style=" height: 36rem;"></div>
+  </div>
+</div>
