--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Gerador de cartão para empresas</h1>
+  <h1>Crie o seu cartão de negócios</h1>
 
   <!-- BARRA LATERAL ESQUERDA -->
   <div class="tab-content float-left col-3 p-0 mt-2 list-element-bar box-shadow" id="myTabContent">
@@ -78,7 +78,11 @@
     </div>
 
     <!-- CANVAS -->
-    <div class="p-3 background-default box-shadow" id="container" style=" height: 36rem;"></div>
+    <div class="p-3 background-default box-shadow" id="container" style="height: 31rem; margin-bottom: 1rem;"></div>
+
+    <div class="form-group form-inline p-2 background-default box-shadow">
+      <button class="btn btn-lg btn-success m-auto" ng-click="downloadImage();">Fazer download!</button>
+    </div>
   </div>
 </div>
 
