--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,8 +1,13 @@
 <div class="container">
-  <h1>Crie o seu cartão de negócios</h1>
+
+  <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
+    <div class="container">
+      <a href="#" class="navbar-brand">Crie o seu cartão de negócios</a>
+    </div>
+  </div>
 
   <!-- BARRA LATERAL ESQUERDA -->
-  <div class="tab-content float-left col-3 p-0 mt-2 list-element-bar box-shadow" id="myTabContent">
+  <div class="tab-content float-left col-3 p-0 mt-6 list-element-bar box-shadow" id="myTabContent">
     <!-- ADICIOANR IMAGEM -->
     <div class="add-item background-default box-shadow">
       <button class="btn btn-info" data-toggle="modal" data-target="#modalSelcionarImagens">
@@ -42,7 +47,7 @@
   </div>
 
   <!-- PAINEL CENTRAL -->
-  <div class="col-9 float-left mt-2">
+  <div class="col-9 float-left mt-6">
     <div class="form-group form-inline p-2 background-default box-shadow">
       <!-- SELCIONAR COR DA FONTE -->
       <div class="input-group ml-2" ng-if="elementSelected.attrs.text">
