--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,9 @@
 <script src="lib/angular/angular.js"></script>
 <script src="lib/angular-route/angular-route.js"></script>
 <script src="app.js"></script>
+<script src="factories/file-reader.factory.js"></script>
+<script src="directives/file-select.directive.js"></script>
+<script src="view1/view1.config.js"></script>
 <script src="view1/view1.js"></script>
 <script src="core/version/version.js"></script>
 <script src="core/version/version-directive.js"></script>
