--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,7 @@
 <script src="lib/angular-route/angular-route.js"></script>
 <script src="app.js"></script>
 <script src="factories/file-reader.factory.js"></script>
+<script src="factories/konvas.factory.js"></script>
 <script src="directives/file-select.directive.js"></script>
 <script src="view1/view1.config.js"></script>
 <script src="view1/view1.js"></script>
