Inserindo gulpfile e suas configurações

--- a/app/index.html
+++ b/app/index.html
@@ -13,13 +13,13 @@
   <link rel="stylesheet" href="lib/html5-boilerplate/dist/css/main.css">
   <script src="lib/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 
-  <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../node_modules/@fortawesome/fontawesome-free/js/all.js"></script>
-  <script src="../node_modules/konva/konva.min.js"></script>
+  <script src="lib/jquery/jquery.min.js"></script>
+  <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="lib/@fortawesome/fontawesome-free/js/all.min.js"></script>
+  <script src="lib/konva/konva.min.js"></script>
 
-  <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.css">
+  <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="lib/@fortawesome/fontawesome-free/css/all.min.css">
   <link rel="stylesheet" href="app.css">
 </head>
 <body>
